@@ -60,10 +60,6 @@ dependencies {
 
 useTestFixtures()
 
-test {
-    jvmArgs '-Xms128m', '-Xmx512m', '-XX:MaxPermSize=128m', '-XX:+HeapDumpOnOutOfMemoryError'
-}
-
 [compileGroovy, compileTestGroovy]*.groovyOptions*.fork(memoryInitialSize: '128M', memoryMaximumSize: '1G')
 
 task buildReceiptResource(type: Copy, dependsOn: rootProject.createBuildReceipt) {
